Tue Mar  3 21:12:10 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/Notify_Service/Notify_Service.cpp:

        * orbsvcs/orbsvcs/Notify/Any/CosEC_ProxyPushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Any/CosEC_ProxyPushSupplier.cpp:
        * orbsvcs/orbsvcs/Notify/Any/ProxyPushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Any/ProxyPushSupplier.cpp:

        * orbsvcs/orbsvcs/Notify/CosNotify_Service.cpp:
        * orbsvcs/orbsvcs/Notify/ETCL_Filter.cpp:
        * orbsvcs/orbsvcs/Notify/Method_Request_Dispatch.cpp:

        * orbsvcs/orbsvcs/Notify/Sequence/SequenceProxyPushSupplier.cpp:

        * orbsvcs/orbsvcs/Notify/Structured/StructuredProxyPushConsumer.cpp:

          Fix debug output formatting for wchar consistency.
        
Tue Mar  3 13:01:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3547_Regression/Stock_Quoter_Client.cpp:
          Added a worker thread

Tue Mar  3 12:31:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/DIOP_Acceptor.cpp
        * tao/Strategies/DIOP_Connection_Handler.cpp
        * tao/Strategies/SCIOP_Acceptor.cpp
        * tao/Strategies/SCIOP_Connection_Handler.cpp
        * tao/Strategies/SCIOP_Connector.cpp
        * tao/Strategies/UIOP_Acceptor.cpp
        * tao/Strategies/UIOP_Connection_Handler.cpp
        * tao/Strategies/UIOP_Connector.cpp
          Unicode fixes

Mon Mar  2 07:22:25 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3553_Regression/Bug_3553_Regression_client.cpp:
        * tests/Bug_3553_Regression/Bug_3553_Regression_server.cpp:
          Resolved compiler error on WinCE target.

Mon Mar  2 22:48:25 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/Notify_Service/Notify_Service.h:
        * orbsvcs/Notify_Service/Notify_Service.cpp:

        * orbsvcs/orbsvcs/CosNotification.mpc:

        * orbsvcs/orbsvcs/Notify/Admin.h:
        * orbsvcs/orbsvcs/Notify/Admin.cpp:
